# rust_cli-chat-app

./: Cargo.toml
src/: main.rs  main_application.rs
src/backend/: mod.rs
src/backend/chat/: body.rs  ctx.rs  mod.rs
src/backend/connect/: alias.rs  ctx.rs  endpoint_hd.rs  event.rs  event_hd.rs  mod.rs  resp_frame_reader.rs
src/config/: buffer_size.rs  message.rs  mod.rs  style.rs
src/connect/: ctx.rs  event.rs  mod.rs
src/entity/: mod.rs
src/entity/alias/: mod.rs  sync.rs  util.rs
src/entity/dto/: base_body.rs  mod.rs
src/frontend/: mod.rs
src/frontend/command/: call_hd.rs  mod.rs  parser.rs  parser_hd.rs  plainer.rs  status.rs
src/frontend/command/parser/: mod.rs  parser.rs  parser_hd.rs  tool.rs
src/frontend/command/runner/: call_hd.rs  mod.rs  plainer.rs
src/frontend/view/: ctx.rs  event.rs  event_hd.rs  mod.rs  tsk.rs
src/util/: char.rs  event_loop.rs  history_loader.rs  log_fmt.rs  mod.rs  mq.rs
src/view/: ctx.rs  event.rs
